# aichatbot

./: CLIENT_ONBOARDING_PROTOCOL.md  CUSTOMER_CONFIG_TEMPLATE.md  CUSTOMER_INSTALLATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  EXAMPLE_CLIENT_DEMO.md  KITSILANO_DENTAL_CONFIG.py  PROGRESS.md  Procfile  Procfile.backup  README.md  READY_TO_SELL.md  SALES_READINESS_CHECKLIST.md  SALES_SCRIPTS.md  api.py  cleanup-git.sh  deploy.sh  force-rebuild.txt  main.py.backup2  nixpacks.toml.backup  pyproject.toml  railway.json  railway.toml  start.sh
backend/: client_config.py  requirements.txt
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: .rscinfo  .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.json
frontend/app/: page.tsx
frontend/app/about/: page.tsx
frontend/app/pricing/: page.tsx
frontend/app/privacy/: page.tsx
frontend/components/: ContactForm.tsx
frontend/data/: blog-posts.ts
frontend/lib/: api.ts  blog.ts  emailjs.ts
frontend/public/: embed.js  robots.txt
python-backend/: api.py  client_config.py  requirements.txt
ui/: .env.local  vercel.json
ui/app/: layout.tsx  page.tsx
ui/components/: Chat.tsx  ChatWidget.tsx.backup  NewsletterSignup.tsx  OriginalChatWidget.tsx
ui/data/: README.md  blog-posts.ts
ui/lib/: types.ts
ui/public/: sitemap.xml
(+125 files in other folders)
